# dualexis-open

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORT_REPORT.md  LICENSE  Makefile  OPEN_SOURCE_READINESS.md  OPEN_SOURCE_READINESS_REPORT.md  README.md  cleanup_report.md  environment.yml  pyproject.toml  requirements.txt
apps/: __init__.py
apps/api/: __init__.py  main.py  routes.py
apps/edge_node/: main.py
apps/orchestrator/: main.py
apps/simulator/: main.py
artifact/: ARTIFACT_EVALUATION.md  CITATION.cff  Dockerfile  EXPECTED_OUTPUTS.md  INSTALL.md  LICENSE  README.md  REPRODUCE.md  clean.sh  commands.sh  expected_outputs.md
artifact/reports/: open_source_readiness.md  public_repo_cleanup_report.md
artifact/scripts/: reproduce_validation.sh
configs/: evacuation_recommendation.yaml  exit_blockage.yaml  multimodal_conflict.yaml
docs/: alignment_policy.md  architecture.md  audit_comparison_methodology.md  benchmark_repair_design.md  coupling_controlled_par.md  datasets.md  development.md  e2_independent_ground_truth.md  edge_infrastructure.md  edge_runtime.md  evaluation.md  event_taxonomy.md  framework.md  local_reasoning.md  pipeline.md  privacy.md  safety_graph.md  simulation.md  temporal_graph.md  threat_model.md
docs/diagrams/: README.md  _mermaid_theme.mmd  edge_deployment_architecture.mmd  embeds.md  end_to_end_pipeline.mmd  experimental_evaluation_workflow.mmd  hitl_orchestration_flow.mmd  privacy_runtime.mmd  temporal_safety_graph.mmd
dualexis/: __init__.py  cli.py
dualexis/audit/: __init__.py  logger.py
dualexis/core/: __init__.py  config.py  exceptions.py  interfaces.py  version.py
dualexis/cssg/: __init__.py  causal_factors.py  chains.py  export.py  metrics.py  models.py  paths.py  runner.py  service.py
dualexis/edge_perception/: README.md  __init__.py  interfaces.py  models.py  service.py
dualexis/edge_runtime/: __init__.py  health.py  models.py  node.py  service.py  telemetry.py
dualexis/evaluation/: README.md  __init__.py  baselines.py  comparable_baselines.py  comparison.py  experiment.py  harness_b5_alignment.py  harness_b5_labels_export.py  harness_honesty_export.py  interfaces.py  metrics.py  models.py  privacy_fuzz_battery.py  procedural_agreement.py  protocol.py  report.py  results.py  service.py
dualexis/experiments/: __init__.py  audit_comparison_battery.py  battery.py  benchmark_manifest.py  config.py  counterfactual_battery.py  coupling_controlled_par.py  cssg_battery.py  decoupled_benchmark.py  e2_independent_gt.py  empirical_battery.py  multiseed.py  multiseed_statistics.py  robustness_battery.py  runner.py  sssg_battery.py  validation_battery.py
dualexis/federation/: __init__.py  client.py  registry.py
dualexis/fusion/: __init__.py  engine.py
dualexis/governance/: __init__.py  cases.py  evaluation.py  export.py  formal_audit.py  formal_export.py  formal_graph.py  formal_metrics.py  formal_models.py  graph.py  metrics.py  models.py  oracle.py  simulator.py  state_machine.py
dualexis/graph/: __init__.py  event_graph.py
dualexis/leakage_audit/: __init__.py  audit.py  dependency_graph.py  export.py  models.py  monte_carlo.py  overlap.py  scoring.py  spec_extraction.py
dualexis/local_reasoning/: README.md  __init__.py  interfaces.py  mock_llm.py  models.py  prompt_templates.py  service.py
dualexis/measurement/: __init__.py  export.py  latency.py  models.py  privacy.py  robustness.py  service.py
dualexis/orchestration/: README.md  __init__.py  interfaces.py  models.py  pipeline.py  service.py
dualexis/perception/: __init__.py  base.py
dualexis/pipeline/: __init__.py  config.py  interfaces.py  models.py  service.py
dualexis/privacy/: __init__.py  guard.py  policies.py
dualexis/privacy_runtime/: README.md  __init__.py  interfaces.py  models.py  pass_through.py  policies.py  report.py  service.py
dualexis/reasoning/: __init__.py  engine.py
dualexis/runtime/: __init__.py  in_memory.py
dualexis/schemas/: __init__.py  audit.py  common.py  events.py  fusion.py  lifecycle.py  perception.py  privacy.py  reasoning.py
dualexis/semantic_events/: README.md  __init__.py  interfaces.py  models.py  service.py  taxonomy.py
dualexis/simulation/: README.md  __init__.py  (+17 more)
examples/: safety_graph_neo4j.cypher  safety_graph_subgraph.json
experiments/: benchmark_manifest.yaml
legacy_archive/: README.md
scripts/: generate_independent_ground_truth.py  reproduce.sh  sync_public_jss_artifact.py
tests/: __init__.py  conftest.py  test_documentation_alignment.py
(+2539 files in other folders)
